@@ -1,3 +1,9 @@
+2006-12-25  Katsutoshi Itoh <cut-sea@kahua.org>
+
+	* Change: src/kahua-install.scm
+	  Add New material-type as "template",which is
+	  for install XML kahua template files.
+	
 2006-12-25  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* New: doc/SiteBundle.ja
